[package]
name = "ngx_ratelimit_redis"
version = "0.1.0"
edition = "2021"
authors = ["ryuichi1208"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nginx = { version = "0.4.1", features = ["http"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
lazy_static = "1.4.0"
tokio = { version = "1.28.1", features = ["rt", "time", "sync"] }
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
